--- a/ghost/admin/tpl/settings/user-profile.hbs
+++ b/ghost/admin/tpl/settings/user-profile.hbs
@@ -69,7 +69,7 @@
                 <input type="password" id="user-new-password-verification">
             </div>
             <div class="form-group">
-                <button class="button-delete">Change Password</button>
+                <button class="button-delete button-change-password">Change Password</button>
             </div>
 
         </fieldset>
