--- a/ghost/admin/tpl/preview.hbs
+++ b/ghost/admin/tpl/preview.hbs
@@ -10,6 +10,22 @@
         <a class="post-edit" href="#"><span class="hidden">Edit Post</span></a>
         <a class="post-settings" href="#" data-toggle=".menu-drop-right"><span class="hidden">Post Settings</span></a>
         <ul class="menu-drop-right overlay">
+            <li class="post-setting">
+                <div class="post-setting-label">
+                    <label for="url">URL</label>
+                </div>
+                <div class="post-setting-field">
+                    <input class="post-setting-slug" type="text" value="{{{slug}}}">
+                </div>
+            </li>
+            <!--<li class="post-setting">
+                <div class="post-setting-label">
+                    <label for="url">Pub Date</label>
+                </div>
+                <div class="post-setting-field">
+                    <input class="post-setting-date" type="text" value=""><span class="post-setting-calendar"></span>
+                </div>
+            </li>-->
             <li><a href="#" class="delete">Delete</a></li>
         </ul>
     </section>
