--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -36,63 +36,10 @@
         <aside id="modal-container">
         </aside>
 
-        <script src="/shared/vendor/jquery/jquery.js"></script>
-        <script src="/shared/vendor/jquery/jquery-ui-1.10.3.custom.min.js"></script>
-        <script src="/public/lib/jquery-utils.js"></script>
-        <script src="/shared/vendor/underscore.js"></script>
-        <script src="/shared/vendor/backbone/backbone.js"></script>
-        <script src="/shared/vendor/handlebars/handlebars-runtime.js"></script>
-        <script src="/shared/vendor/moment.js"></script>
+        {{{ghostScriptTags}}}
 
-        <script src="/public/vendor/icheck/jquery.icheck.min.js"></script>
-
-        <script src="/shared/vendor/jquery/jquery.ui.widget.js"></script>
-        <script src="/shared/vendor/jquery/jquery.iframe-transport.js"></script>
-        <script src="/shared/vendor/jquery/jquery.fileupload.js"></script>
-
-        <script src="/public/vendor/codemirror/codemirror.js"></script>
-        <script src="/public/vendor/codemirror/addon/mode/overlay.js"></script>
-        <script src="/public/vendor/codemirror/mode/markdown/markdown.js"></script>
-        <script src="/public/vendor/codemirror/mode/gfm/gfm.js"></script>
-        <script src="/public/vendor/showdown/showdown.js"></script>
-        <script src="/public/vendor/showdown/extensions/ghostdown.js"></script>
-        <script src="/shared/vendor/showdown/extensions/github.js"></script>
-        <script src="/public/vendor/shortcuts.js"></script>
-        <script src="/public/vendor/validator-client.js"></script>
-        <script src="/public/vendor/countable.js"></script>
-        <script src="/public/vendor/to-title-case.js"></script>
-        <script src="/public/vendor/packery.pkgd.min.js"></script>
-        <script src="/public/vendor/jquery.hammer.min.js"></script>
-
-        <script src="/public/init.js"></script>
-
-        <script src="/public/assets/lib/uploader.js"></script>
-
-        <script src="/public/tpl/hbs-tpl.js"></script>
-        <script src="/public/mobile-interactions.js"></script>
-        <script src="/public/toggle.js"></script>
-        <script src="/public/markdown-actions.js"></script>
-        <script src="/public/helpers/index.js"></script>
-
-        <!-- // require '/public/models/*' -->
-        <script src="/public/models/post.js"></script>
-        <script src="/public/models/user.js"></script>
-        <script src="/public/models/tag.js"></script>
-        <script src="/public/models/widget.js"></script>
-        <script src="/public/models/settings.js"></script>
-        <script src="/public/models/uploadModal.js"></script>
-        <!-- // require '/public/views/*' -->
-        <script src="/public/views/base.js"></script>
-        <script src="/public/views/post-settings.js"></script>
-        <script src="/public/models/uploadModal.js"></script>
-        <script src="/public/views/blog.js"></script>
-        <script src="/public/views/editor.js"></script>
-        <script src="/public/views/editor-tag-widget.js"></script>
-        <script src="/public/views/login.js"></script>
-        <script src="/public/views/settings.js"></script>
-        <script src="/public/views/debug.js"></script>
-        <script src="/public/router.js"></script>
         {{{block "bodyScripts"}}}
+        
         <script>
             Ghost.init();
         </script>
