--- a/core/client/assets/sass/layouts/editor.scss
+++ b/core/client/assets/sass/layouts/editor.scss
@@ -449,7 +449,7 @@ body.zen {
         }
     }
     .tags {
-        width: 261px;
+        width: 281px;
     }
 
     .tag-label, .tag-label.touch {
@@ -473,41 +473,52 @@ body.zen {
     position: absolute;
     top: 0;
     left: 0;
-    right: 165px;
+    right: 0;
     bottom: 0;
     text-transform: none;
     padding: 10px 0 0 0;
 
-    @include  breakpoint($mobile) {
-        right: 0;
+    &:after, &:before {
+        content: "";
+        position: fixed;
+        top: 10px;
+        right: 270px;
+        width: 20px;
+        height: 26px;
+        @include linear-gradient(left, rgba(26, 28, 29, 0.00), rgba(26, 28, 29, 1.00));
+        z-index: 9999;
 
-        &:after, &:before {
-            content: "";
-            position: fixed;
-            top: 10px;
+        @include breakpoint($mobile) {
             right: 128px;
-            width: 20px;
-            height: 26px;
-            @include linear-gradient(left, rgba(26, 28, 29, 0.00), rgba(26, 28, 29, 1.00));
-            z-index: 9999;
         }
+    }
 
-        &:before {
-            right: auto;
-            left: 29px;
-            @include linear-gradient(right, rgba(26, 28, 29, 0.00), rgba(26, 28, 29, 1.00));
-        }
+    &:before {
+        right: auto;
+        left: 29px;
+        @include linear-gradient(right, rgba(26, 28, 29, 0.00), rgba(26, 28, 29, 1.00));
     }
 }
 
 .tags {
+    @include box-sizing(border-box);
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+    width: auto;
+    max-width: 80%;
+    max-width: calc(100% - 300px);
+    height: 26px;
+    padding-left: 20px;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+    @include transition(width 0.2s linear);
+
     @include breakpoint($mobile) {
-        position: relative;
-        width: 156px;
-        height: 26px;
-        padding-left: 20px;
-        overflow-x: scroll;
-        @include transition(width 0.2s linear);
+        display: block;
+        width: 166px;
+        max-width: inherit;
     }
 }
 
@@ -530,6 +541,7 @@ body.zen {
 
 .tag-input {
     display: inline-block;
+    vertical-align: top;
     color: $lightgrey;
     font-weight: 300;
     background: transparent;
@@ -545,11 +557,11 @@ body.zen {
         text-shadow: rgba(255,255,255,0.15) 0 1px 0;
         @include transition;
     }
-    display: block;
-    float: left;
+    display: inline;
     margin-right: 5px;
     padding: 0 5px;
     color: $lightgrey;
+    white-space: nowrap;
     background: lighten($grey, 15%);
     border-radius: $rounded;
     box-shadow: 
@@ -564,10 +576,6 @@ body.zen {
 
     }
 
-    @include breakpoint($mobile) {
-        display: inline;
-        float: none;
-    }
 }
 
 .suggestions {
