New post title placeholder

--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -4,7 +4,7 @@
     <header>
         <section class="box entry-title">
             <input type="text" id="entry-title"
-                   placeholder="{{e "editor.entry_title.placeholder" "The Post Title Gets Inserted Up Here"}}"
+                   placeholder="{{e "editor.entry_title.placeholder" "Your Post Title"}}"
                    value="" tabindex="1">
         </section>
     </header>
