Publish button amends
Fixes #667

- Removed superfluous as-of-yet-unused options in the publish menu.
- Adjusted display names of publish buttons according to differing
states the publish menu can be in (new post, saved draft, published
post).
- Added red highlight style to "important" status change options in the
publish menu (draft => published, published => unpublished).
- Added suite of functional tests around new labels and classes.

--- a/core/client/assets/sass/layouts/editor.scss
+++ b/core/client/assets/sass/layouts/editor.scss
@@ -420,9 +420,11 @@ body.zen {
         box-shadow: rgba(255,255,255,0.4) 0 1px 0 inset;
     }
 
-    .splitbutton-save{
-        .button-save{
-            @include transition(width 0.25s ease);
+    .splitbutton-save, 
+    .splitbutton-delete{
+        .button-save,
+        .button-delete{
+            @include transition(width 0.25s ease, background 0.3s linear);
         }
 
         .editor-options{
