--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -40,14 +40,12 @@
             <ul class="suggestions overlay"></ul>
         </section>
         <div class="right">
-            <section id="entry-actions" class="splitbutton-save">
-                <button type="button" class="button-save js-post-button"></button>
+            <section id="entry-actions" class="splitbutton-save js-publish-splitbutton">
+                <button type="button" class="button-save js-publish-button"></button>
                 <a class="options up" data-toggle="ul" href="#"><span class="hidden">Options</span></a>
                 <ul class="editor-options overlay" style="display:none">
-                    <li data-set-status="published"><a href="#">Publish Now</a></li>
-                    <li data-set-status="queue"><a href="#">Add to Queue</a></li>
-                    <li data-set-status="publish-on"><a href="#">Publish on...</a></li>
-                    <li data-set-status="draft"><a href="#">Save Draft</a></li>
+                    <li data-set-status="published"><a href="#"></a></li>
+                    <li data-set-status="draft"><a href="#"></a></li>
                 </ul>
             </section>
         </div>
