Adds slashes to urls
ref issue #448

- adds slashes to urls, templates and tests

TODO

Add function to add slash to urls automatically

--- a/core/client/tpl/settings/general.hbs
+++ b/core/client/tpl/settings/general.hbs
@@ -24,7 +24,7 @@
                 {{#if logo}}
                     <a class="js-modal-logo"><img id="blog-logo" src="{{logo}}" alt="logo"></a>
                 {{else}}
-                    <a class="button-add js-modal-logo" href="#">Upload Image</a>
+                    <a class="button-add js-modal-logo" >Upload Image</a>
                 {{/if}}
                 <p>Display a logo on your site in place of blog title</p>
             </div>
@@ -34,7 +34,7 @@
                 {{#if cover}}
                     <a class="js-modal-cover"><img id="blog-cover" src="{{cover}}" alt="cover photo"></a>
                 {{else}}
-                    <a class="button-add js-modal-cover" href="#">Upload Image</a>
+                    <a class="button-add js-modal-cover">Upload Image</a>
                 {{/if}}
                 <p>Display a cover photo on your site</p>
             </div>
