Added hover state for blog-logo and blog-cover using existing ids
- blog-logo and blog-cover now have a hover state of cursor: pointer

--- a/core/client/tpl/settings/general.hbs
+++ b/core/client/tpl/settings/general.hbs
@@ -22,7 +22,7 @@
             <div class="form-group">
                 <label><strong>Blog Logo</strong></label>
                 {{#if logo}}
-                    <a class="js-modal-logo"><img id="blog-logo" src="{{logo}}" alt="logo"></a>
+                    <a class="js-modal-logo" href="#"><img id="blog-logo" src="{{logo}}" alt="logo"></a>
                 {{else}}
                     <a class="button-add js-modal-logo" href="#">Upload Image</a>
                 {{/if}}
@@ -32,7 +32,7 @@
             <div class="form-group">
                 <label><strong>Blog Cover</strong></label>
                 {{#if cover}}
-                    <a class="js-modal-cover"><img id="blog-cover" src="{{cover}}" alt="cover photo"></a>
+                    <a class="js-modal-cover" href="#"><img id="blog-cover" src="{{cover}}" alt="cover photo"></a>
                 {{else}}
                     <a class="button-add js-modal-cover" href="#">Upload Image</a>
                 {{/if}}
