--- a/ghost/admin/tpl/notification.hbs
+++ b/ghost/admin/tpl/notification.hbs
@@ -1,4 +1,4 @@
 <section class="notification{{#if type}}-{{type}}{{/if}} notification-{{status}} js-notification">
-    {{message}}
+    {{{message}}}
     <a class="close" href="#"><span class="hidden">Close</span></a>
 </section>
