--- a/ghost/admin/assets/sass/modules/forms.scss
+++ b/ghost/admin/assets/sass/modules/forms.scss
@@ -43,7 +43,7 @@ form {
         font-weight: bold;
         color: $brown;
         text-align: right;
-        
+
         @include breakpoint(550px) {
             display: block;
             position: relative;
@@ -256,6 +256,49 @@ input[type="reset"] {
     &:hover {
         background: transparent;
         text-decoration: underline;
+    }
+}
+
+// Back button for pane animations
+.button-back {
+    @extend %button;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    margin-right: 30px;
+    padding: 0.5em 1.37em 0.5em 1.10em;
+    display: none;
+    color: #fff;
+    background: $blue;
+    border: none;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+
+    &:before {
+        content: ' ';
+        position: absolute;
+        top: 0;
+        left: -10px;
+        width: 0;
+        height: 0;
+        border-width: 18px 10px 18px 0;
+        border-color: transparent $blue transparent transparent;
+        border-style: solid solid solid none;
+        @include transform(scale(0.9999));
+        @include transition(border-color 0.3s ease);
+    }
+
+    &:hover {
+        color: #fff;
+        background: darken($blue, 10%);
+        border-color: darken($blue, 10%);
+        &:before {
+            border-right-color: darken($blue, 10%);
+        }
+    }
+
+    @include breakpoint($tablet) {
+        display: inline-block;
     }
 }
 
