--- a/ghost/admin/tpl/preview.hbs
+++ b/ghost/admin/tpl/preview.hbs
@@ -1,4 +1,5 @@
 <header class="floatingheader">
+    <button class="button-back" href="#">Back</button>
     <a class="{{#if featured}}featured{{else}}unfeatured{{/if}}" href="#">
         <span class="hidden">Star</span>
     </a>
