--- a/ghost/admin/tpl/settings/user-profile.hbs
+++ b/ghost/admin/tpl/settings/user-profile.hbs
@@ -1,4 +1,5 @@
 <header>
+    <button class="button-back">Cancel</button>
     <h2 class="title">Your Profile</h2>
     <section class="page-actions">
         <button class="button-save">Save</button>
