--- a/core/client/tpl/settings/general.hbs
+++ b/core/client/tpl/settings/general.hbs
@@ -4,55 +4,57 @@
         <button class="button-save">Save</button>
     </section>
 </header>
+
 <section class="content">
     <form id="settings-general" novalidate="novalidate">
         <fieldset>
+
             <div class="form-group">
-                <label><strong>Blog Title</strong></label>
-                <input id="blog-title" name="general[title]" type="text" value="{{title}}">
-                <p>How your blog name appears on the site</p>
+                <label for="blog-title">Blog Title</label>
+                <input id="blog-title" name="general[title]" type="text" value="{{title}}" />
+                <p>The name of your blog</p>
             </div>
 
             <div class="form-group">
-                <label for="blog-description"><strong>Blog Description</strong></label>
+                <label for="blog-description">Blog Description</label>
                 <textarea id="blog-description">{{description}}</textarea>
-                <p>Display a short description below the blog title</p>
+                <p>Describe what your blog is about</p>
             </div>
 
             <div class="form-group">
-                <label><strong>Blog Logo</strong></label>
+                <label for="blog-logo">Blog Logo</label>
                 {{#if logo}}
                     <a class="js-modal-logo" href="#"><img id="blog-logo" src="{{logo}}" alt="logo"></a>
                 {{else}}
                     <a class="button-add js-modal-logo" href="#">Upload Image</a>
                 {{/if}}
-                <p>Display a logo on your site in place of blog title</p>
+                <p>Display a sexy logo for your publication</p>
             </div>
 
             <div class="form-group">
-                <label><strong>Blog Cover</strong></label>
+                <label for="blog-cover">Blog Cover</label>
                 {{#if cover}}
                     <a class="js-modal-cover" href="#"><img id="blog-cover" src="{{cover}}" alt="cover photo"></a>
                 {{else}}
                     <a class="button-add js-modal-cover" href="#">Upload Image</a>
                 {{/if}}
-                <p>Display a cover photo on your site</p>
+                <p>Display a cover image on your site</p>
             </div>
 
             <div class="form-group">
-                <label for="email-address"><strong>Email Address</strong></label>
-                <input id="email-address" name="general[email-address]" type="email" value="{{email}}">
-                <p>Address to use for <a href="#">admin notifications</a></p>
+                <label for="email-address">Email Address</label>
+                <input id="email-address" name="general[email-address]" type="email" value="{{email}}" autocapitalize="off" autocorrect="off" />
+                <p>Address to use for admin notifications</p>
             </div>
 
             <div class="form-group">
-                <label for="postsPerPage"><strong>Posts per page</strong></label>
-                <input id="postsPerPage" name="general[postsPerPage]" type="number" value="{{postsPerPage}}">
-                <p>Number of posts per page displayed</p>
+                <label for="postsPerPage">Posts per page</label>
+                <input id="postsPerPage" name="general[postsPerPage]" type="number" value="{{postsPerPage}}" />
+                <p>How many posts should be displayed on each page</p>
             </div>
 
             <div class="form-group">
-                <label for="activeTheme"><strong>Theme</strong></label>
+                <label for="activeTheme">Theme</label>
                 <select id="activeTheme" name="general[activeTheme]">
                     {{#each availableThemes}}
                         <option value="{{name}}" {{#if active}}selected{{/if}}>{{name}}</option>
@@ -62,6 +64,5 @@
             </div>
 
         </fieldset>
-
     </form>
 </section>
