Enabled post setting to change published date
closes #402

--- a/core/client/tpl/preview.hbs
+++ b/core/client/tpl/preview.hbs
@@ -18,14 +18,14 @@
                     <input class="post-setting-slug" type="text" value="{{{slug}}}">
                 </div>
             </li>
-            <!--<li class="post-setting">
+            <li class="post-setting">
                 <div class="post-setting-label">
                     <label for="url">Pub Date</label>
                 </div>
                 <div class="post-setting-field">
-                    <input class="post-setting-date" type="text" value=""><span class="post-setting-calendar"></span>
+                    <input class="post-setting-date" disabled type="text" value="">
                 </div>
-            </li>-->
+            </li>
             <li><a href="#" class="delete">Delete</a></li>
         </ul>
     </section>
