--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -43,7 +43,7 @@
 
             <section id="entry-controls">
                 <a class="entry-settings" href="#" data-toggle=".menu-right"><span class="hidden">Post Settings</span></a>
-                <ul class="entry-settings-menu menu-right overlay">
+                <ul class="entry-settings-menu menu-right overlay" style="display: none">
                     <li class="post-setting">
                         <div class="post-setting-label">
                             <label for="url">URL</label>
@@ -52,14 +52,14 @@
                             <input class="post-setting-slug" type="text" value="" />
                         </div>
                     </li>
-                    <!--<li class="post-setting">
+                    <li class="post-setting">
                         <div class="post-setting-label">
                             <label for="url">Pub Date</label>
                         </div>
                         <div class="post-setting-field">
-                            <input class="post-setting-date" type="text" value=""><span class="post-setting-calendar"></span>
+                            <input class="post-setting-date" disabled type="text" value=""><!--<span class="post-setting-calendar"></span>-->
                         </div>
-                    </li>-->
+                    </li>
                     <li><a href="#" class="delete">Delete</a></li>
                 </ul>
             </section>
