Fix notification link color
Closes #772
- Changed notification link color inherit, and added underline

--- a/core/client/assets/sass/modules/global.scss
+++ b/core/client/assets/sass/modules/global.scss
@@ -941,6 +941,11 @@ nav {
         &:hover { color: #fff; }
 
     }
+
+    a {
+        color: inherit;
+        text-decoration: underline;
+    }
 }
 
 .notification-success {
