Refactoring Ghost middleware
closes #657, closes #761

- Got rid of initTheme from ghost.js (yay)
- Divided up the logic for static assets and views
- Ghost admin static assets are now served from /ghost/
- New logic to figure out if we're on the admin, or a theme and which theme we are on
- Activate theme method reregisters static access and uncaches views
- Re-ordered all of the middleware, and ensured we had a 404 handler at the end
- Activate theme method ensures that middleware maintains order

--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -17,7 +17,7 @@
         <meta http-equiv="cleartype" content="on">
 
         <link rel="stylesheet" type='text/css' href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700'>
-        <link rel="stylesheet" href="/public/css/screen.css">
+        <link rel="stylesheet" href="/ghost/css/screen.css">
         {{{block "pageStyles"}}}
     </head>
     <body class="{{bodyClass}}">
@@ -39,7 +39,7 @@
         {{{ghostScriptTags}}}
 
         {{{block "bodyScripts"}}}
-        
+
         <script>
             Ghost.init();
         </script>
