Removing i18n until it's done properly

--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -4,14 +4,14 @@
     <header>
         <section class="box entry-title">
             <input type="text" id="entry-title"
-                   placeholder="{{e "editor.entry_title.placeholder" "Your Post Title"}}"
+                   placeholder="Your Post Title"
                    value="" tabindex="1">
         </section>
     </header>
 
     <section class="entry-markdown active">
         <header class="floatingheader">
-            {{e "editor.headers.markdown.label" "Markdown"}}
+            Markdown
             <a class="markdown-help" href="#"><span class="hidden">What is Markdown?</span></a>
         </header>
         <section class="entry-markdown-content">
